--- a/db/fixtures/02-users.rb.example
+++ b/db/fixtures/02-users.rb.example
@@ -1,2 +1,4 @@
+# encoding: utf-8
+# 示例数据，请改为管理员自己的邮箱
 User.seed(:email){ |u| u.email = 'lifu@taobao.com' }
 User.find_by_email('lifu@taobao.com').grant Role::Admin
