--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ tmp
 log
 config/database.yml
 config/initializers/omniauth.rb
+config/environments/production.rb
 public/store
 public/assets
 public/apposs_file
