--- a/config/environments/production.rb.sample
+++ b/config/environments/production.rb.sample
@@ -1,7 +1,7 @@
 Apposs::Application.configure do
-#  config.force_ssl = true
+  # config.force_ssl = true
   # Settings specified here will take precedence over those in config/application.rb
-
+  config.active_support.deprecation = :notify
   # The production environment is meant for finished, "live" apps.
   # Code is not reloaded between requests
   config.cache_classes = true
