状态描述修改：暂停 -> 挂起，指令执行时添加日志，脚本执行使用独立的子进程

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ config/database.yml
 config/pluglets.yml
 config/initializers/omniauth.rb
 config/environments/production.rb
+private
 public/store
 public/assets
 public/apposs_file
