在异步调用时针对测试环境手工绕开，修改用例后通过所有测试

--- a/spec/fixtures/directive_templates.yml
+++ b/spec/fixtures/directive_templates.yml
@@ -66,6 +66,6 @@ directive_template12:
 directive_template13:
   id: 13
   directive_group_id: 1
-  name: 'do a pluglet'
+  name: 'echo do a pluglet'
   alias: 'a pluglet'
   pluggable: true
