添加apposs file功能，同时调整 download_url 名称

--- a/config/environments/production.rb.sample
+++ b/config/environments/production.rb.sample
@@ -37,4 +37,5 @@ Apposs::Application.configure do
 
   # Send deprecation notices to registered listeners
   config.active_support.deprecation = :notify
+  # config.base_url = "<your-site-url-here>"
 end
