--- a/config/initializers/omniauth.rb.example
+++ b/config/initializers/omniauth.rb.example
@@ -1,3 +1,3 @@
 Rails.application.config.middleware.use OmniAuth::Builder do
-  provider :google_oauth2, '<Client ID>', '<Client secret>'
+  provider :google_oauth2, '<Client ID>', '<Client secret>', {scope:'https://www.googleapis.com/auth/userinfo.email'}
 end
