对比内部版本代码，同步所有文件

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ db/schema.rb
 db/fixtures/02-users.rb
 db/fixtures/03-agents.rb
 db/fixtures/04-apps.rb
+resque_auth.rb
+nginx.site
 nbproject
 dump.rdb
 vendor/cache/*
