--- a/config/pluglets.yml.example
+++ b/config/pluglets.yml.example
@@ -1,5 +1,5 @@
 brakeman summary:
-    cd $private_folder && bundle exec brakeman -f json --quiet --relative-path --summary 2>/dev/null
+    cd $private_folder && bundle exec brakeman -f json --quiet --relative-paths --summary 2>/dev/null
 brakeman compare:
-    cd $private_folder && bundle exec brakeman -f json --quiet --relative-path --compare brakeman.json 2>/dev/null
+    cd $private_folder && bundle exec brakeman -f json --quiet --relative-paths --compare brakeman.json 2>/dev/null
 
