--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ config/database.yml
 config/pluglets.yml
 config/initializers/omniauth.rb
 config/environments/production.rb
+config/initializers/secret_token.rb
 private
 public/store
 public/assets
